--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="4J5y04MaCnk02oVyp3ZIKIglmTYa6xGxuBVtbmE4YYc" />
     <link rel="icon" type="image/svg+xml" href="https://ui-avatars.com/api/?name=Omkar Kumar" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Omkar Kumar</title>
