defined desc and search terms of page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="google-site-verification" content="4J5y04MaCnk02oVyp3ZIKIglmTYa6xGxuBVtbmE4YYc" />
     <link rel="icon" type="image/svg+xml" href="https://ui-avatars.com/api/?name=Omkar Kumar" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Omkar Kumar" />
+    <meta name="keywords" content="Omkar Kumar, NITP, NIT Patna, JNV Sitamarhi, software developer, MERN stack, C++, portfolio, full-stack developer, JavaScript, React" />
+    <meta name="description" content="Portfolio of Omkar Kumar, a passionate Computer Science and Engineering student skilled in MERN Stack, C++, and building modern web applications. Explore my projects, skills, and experience." />
+
     <title>Omkar Kumar</title>
   </head>
   <body>
